added update preferences bff
