# web-portal-bff/src/api/preferences/controller/preferences-controller.ts
@@ -2,7 +2,6 @@ import express from "express";
 import {PreferencesService} from "../service/preferences-service";
 import {ClientPreferences} from "../model/Preferences";
 import {errorHandler} from "../../../helper/error-handler";
-import extractAuthToken from "../../../helper/extract-auth-token";
 
 const router = express.Router();
 
@@ -30,6 +29,37 @@ router.get("/preferences", (req, res) => {
         }).catch((reason) => {
             errorHandler(res, reason);
         });
+
+});
+
+router.put("/preferences", (req, res) => {
+  // #swagger.tags = ["Preferences"]
+  // #swagger.description = "Update preferences."
+
+  /* #swagger.responses[200] = {
+            description: 'Update the preferences on the server.',
+             content: {
+                "application/json": {
+                    schema: { $ref: '#/components/schemas/Preferences' }
+                }
+            }
+        }
+    #swagger.requestBody = {
+              required: true,
+              schema: { $ref: "#/components/schemas/Preferences" }
+      }
+    #swagger.responses[401] = {
+            description: 'Unauthorized.'
+           }
+    }
+    #swagger.responses[403] = {
+            description: 'Forbidden.'
+    } */
+  PreferencesService().putPreferences(req.headers.authorization, req.body).then((value) => {
+    res.status(value.status).send(value.data as ClientPreferences);
+  }).catch((reason) => {
+    errorHandler(res, reason);
+  });
 
 });
 
