# web-portal-bff/src/app.ts
@@ -18,7 +18,9 @@ router.use(express.json());
 app.use(router);
 app.use(function (req, res, next)  {
   res.header("Access-Control-Allow-Origin", process.env.ALLOW_ORIGIN);
-  res.header("Access-Control-Allow-Headers", "Origin, X-Requested-With, Content-Type, Accept");
+  res.header("Access-Control-Allow-Headers", "Origin, X-Requested-With, Content-Type, Accept, Authorization");
+  res.header("Access-Control-Allow-Methods", "GET, POST, PUT, DELETE, OPTIONS");
+
   next();
 })
 app.use("", authenticationController);
